--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/1. 部署资源池服务.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/1. 部署资源池服务.md
@@ -1,1 +1,65 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.1 资源池管理
+
+##### 2.2.2.1.1 部署资源池服务
+
+创建资源池之前需要先做好对应资源池类型的部署。本节将为您介绍如何部署资源池，包含Docker资源池部署和虚拟机资源池部署。
+
+##### 2.2.2.1.1.1 前提条件
+
+节点引擎用于管理性能测试，包含启动、关闭性能测试以及收集日志，所以在部署资源池之前需要先部署节点引擎。
+
+##### 2.2.2.1.1.2 步骤引导
+
+a）节点引擎部署
+
+b）Docker资源池部署
+
+c）虚拟机资源池部署
+
+##### 2.2.2.1.1.2.1 节点引擎部署
+
+a）进入全自动测试平台首页，单击页面右上角的工具下载。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 单击工具下载
+
+b）进入工具下载页面，下载节点引擎包。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/1-2.png)
+
+##### 图1-2 下载节点引擎包
+
+c）在Linux或Unix服务器，启动节点引擎包即可。
+
+##### 说明：节点引擎服务地址在资源池新增资源时使用到，新增资源请参考《SoFlu全自动测试平台教程操作指南第2.2.1.5节：新增虚拟机资源》。
+
+##### 2.2.2.1.1.2.2 Docker资源池部署
+
+a）进入工具下载页面，下载资源镜像包。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/1-3.png)
+
+##### 图1-3 下载资源镜像包
+
+b）在Linux或Unix服务器（可与节点引擎部署服务同一机器），安装镜像，开放2375端口，查看Docker镜像信息。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/1-4.png)
+
+##### 图1-4 查看Docker镜像信息
+
+##### 2.2.2.1.1.2.3 虚拟机资源池部署
+
+a）进入工具下载页面，下载JMeter部署包。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/1-5.png)
+
+##### 图1-5 下载JMeter部署包
+
+b）上传JMeter部署包到Linux或Unix服务器（可与节点引擎部署服务同一机器），完成解压启动即可。
