--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/2. 新增资源池.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/2. 新增资源池.md
@@ -14,19 +14,19 @@
 
 a）进入全自动测试平台，单击右上方系统设置按钮，选择“服务 > 资源池管理”。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185061125-36594e6a-9f02-4c35-8fe2-8d0ea1cd349e.png)
 
 ##### 图2-1 单击系统设置按钮
 
 b）进入资源池管理页面，单击新增资源池。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185061145-86776aeb-b7d3-43a0-ab9e-b53a7a5f0992.png)
 
 ##### 图2-2 单击新增资源池
 
 c）系统弹出新增资源池页面，填写资源池名称，选择测试类型和资源池类型，选择完成后，单击提交即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185061165-b837b8e6-e90f-45f4-bbd8-ef6539255961.png)
 
 ##### 图2-3 填写资源池信息
 
