--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/4. 删除资源池.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/4. 删除资源池.md
@@ -16,18 +16,18 @@
 
 a）单击系统设置 > 服务 > 资源池管理，选中需删除的资源池，单击删除。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185061318-dfe82836-0588-47aa-8b69-302419e742ad.png)
 
 ##### 图4-1 选中需删除的资源池
 
 b）系统会弹出提示是否删除，若资源池下无资源，单击确定即可删除。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185061332-18d6f2fb-f197-492b-9f98-079c63b924c2.png)
 
 ##### 图4-2 确定需删除的资源池
 
 c）若资源池下含有资源，系统会再次弹出提示信息，若需继续删除，单击继续删除即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185061353-c9f2b5d6-01cd-4c6a-889d-7b6d188276bd.png)
 
 ##### 图4-3 继续删除资源池
