--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/5. 新增Docker资源.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/5. 新增Docker资源.md
@@ -1,1 +1,55 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.1 资源池管理
+
+##### 2.2.2.1.5 新增Docker资源
+
+本节介绍新增Docker资源的具体操作过程。
+
+##### 2.2.2.1.5.1 前提条件
+
+您需要先部署好Docker资源。
+
+##### 2.2.2.1.5.2 操作步骤
+
+a）单击系统设置 > 服务 > 资源池管理，单击Docker类型资源池所在行的资源管理。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/5-1.png)
+
+##### 图5-1 单击资源管理
+
+b）进入指定Docker资源池“资源管理”页面，单击新增资源。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/5-2.png)
+
+##### 图5-2 单击新增资源
+
+c）系统弹出“新增资源”页面，填写Docker资源相关信息。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/5-3.png)
+
+##### 图5-3 填写Docker资源相关信息
+
+d）单击测试连接，如果信息填写正确会提示“操作成功”，单击提交即可完成。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/5-4.png)
+
+##### 图5-4 单击提交
+
+##### 说明：
+
+##### d1）Docker资源相关信息在部署好Docker资源池后，根据实际情况填写即可。
+
+##### d2）节点引擎服务地址：部署节点引擎包的服务器地址
+
+##### d3）Docker镜像：Docker镜像名
+
+##### d4）Docker Host：Docker镜像所在服务器的地址
+
+##### d5）最大并发数：在该资源运行性能测试的最大并发数
+
+##### d6）监控指标地址：监控性能测试数据服务的地址
