--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/5. 新增Docker资源.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/5. 新增Docker资源.md
@@ -36,7 +36,7 @@ c）系统弹出“新增资源”页面，填写Docker资源相关信息。
 
 d）单击测试连接，如果信息填写正确会提示“操作成功”，单击提交即可完成。
 
-![Uploading image.png…]()
+![image](https://user-images.githubusercontent.com/79617492/185326553-d1a690a7-92d3-4783-a43a-ee13a636f6af.png)
 
 ##### 图5-4 单击提交
 
