--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/6. 新增虚拟机资源.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/6. 新增虚拟机资源.md
@@ -18,25 +18,25 @@
 
 a）单击系统设置 > 服务 > 资源池管理，单击虚拟机类型资源池所在行的资源管理。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185326995-5e7aa3df-912d-4d4f-918c-e0a472dbd211.png)
 
 ##### 图6-1 单击资源管理
 
 b）进入指定虚拟机资源池“资源管理”页面，单击新增资源。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185327035-6ca4f217-363f-42cd-b6ca-9178b50107bd.png)
 
 ##### 图6-2 单击新增资源
 
 c）系统弹出“新增资源”页面，填写虚拟机资源相关信息。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/6-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185327074-de8b130e-4e23-4614-8006-b5341022b710.png)
 
 ##### 图6-3 填写虚拟机资源相关信息
 
 d）单击测试连接，如果信息填写正确会提示“操作成功”，单击提交即可完成。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/6-4.png)
+![image](https://user-images.githubusercontent.com/79617492/185327122-63184528-978c-4f1c-838c-c3472417b344.png)
 
 ##### 图6-4 单击提交
 
