--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/8. 修改资源.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/1. 资源池管理/8. 修改资源.md
@@ -16,18 +16,18 @@
 
 a）单击系统设置 > 服务 > 资源池管理，单击需修改资源池操作列的资源管理选项。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/8-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185328049-e166018e-359f-4ef1-93a0-6f7138088495.png)
 
 ##### 图8-1 单击资源管理选项
 
 b）进入“修改资源”页面，单击需修改资源操作列的修改选项。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/8-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185328107-7605ce94-fc4e-4a9a-bbc4-66a0d3680858.png)
 
 ##### 图8-2 单击修改选项
 
 c）进入“修改资源”页面，修改对应的信息，单击提交。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E7%AE%A1%E7%90%86/8-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185328240-78bf13b6-3eff-4e71-ba5e-9d570f34ae88.png)
 
 ##### 图8-3 单击提交
