--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/2. 消息配置/1. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/2. 消息配置/1. 创建消息事件.md
@@ -1,1 +1,51 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.2 消息配置
+
+##### 2.2.2.2.1 创建消息事件
+
+通过创建消息模板、配置邮箱以及创建消息事件，便可以实现根据不同的使用场景因触发相应的消息事件后自动发送给指定收件人不同的邮件内容。
+
+本节为您介绍如何创建消息事件。
+
+##### 说明：通过创建消息事件，创建的邮件模板和站内信模板即可生效，当触发对应消息事件时，系统便会自动发送消息通知。
+
+##### 2.2.2.2.1.1 前提条件
+
+您已创建所需使用的消息模板。
+
+##### 2.2.2.2.1.2 操作步骤
+
+a）单击右上角的设置图标，再单击服务 > 消息配置 > 消息事件 > 新增消息事件，进入“新增消息事件”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/image.png)
+
+##### 图1-1 进入“新增消息事件”页面
+
+b）在“新增消息事件”，选择对应的信息，单击确定即可。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/1-2.png)
+
+##### 图1-2 填写对应的信息
+
+##### 说明：
+
+##### b1）消息分组：消息分组分为测试用例、性能测试和测试计划三种，当消息分组选择为测试用例时，消息事件可选择用例被评论、用例被评审、用例已评审三种情况；当消息分组选择为性能测试或测试计划时，消息事件可选择执行成功、执行失败两种情况；当消息分组选择为测试计划时，消息事件可选择执行结束的情况。
+
+##### b2）接收人：可选的接收人包括创建人、更新人或当前租户下的用户，但若选择的用户未被授权某项目，则该用户不会接收到该项目对应消息事件的消息；接收类型包括邮件和站内信。
+
+##### b3）接收类型：接收类型分为站内信和邮件，当选择站内信时，将会在平台发送站内信给对应的接收人；当选择邮件时，将会发送邮件给对应的接收人。
+
+##### b4）消息模板：选择消息模板后，发送的消息将会按照消息模板内容格式进行发送。具体请参考《SoFlu全自动测试平台教程操作指南第3.10节：创建站内信模版》和《SoFlu全自动测试平台教程操作指南第4.7节：创建邮件模版》。
+
+c）提交测试用例，触发消息事件，查看站内信的信息。
+
+##### 说明：本节用站内信进行演示，邮件消息同理，触发事件后就能收到对应消息邮件。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/1-3.png)
+
+##### 图1-3 查看站内信的信息
