--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/2. 消息配置/1. 创建消息事件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/2. 消息配置/1. 创建消息事件.md
@@ -22,13 +22,13 @@
 
 a）单击右上角的设置图标，再单击服务 > 消息配置 > 消息事件 > 新增消息事件，进入“新增消息事件”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/image.png)
+![image](https://user-images.githubusercontent.com/79617492/185329915-2a749ce8-0ecd-4092-9d4c-cc568a66364a.png)
 
 ##### 图1-1 进入“新增消息事件”页面
 
 b）在“新增消息事件”，选择对应的信息，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185330040-fae07534-6bf8-411b-879c-bd392e30068f.png)
 
 ##### 图1-2 填写对应的信息
 
@@ -46,6 +46,6 @@ c）提交测试用例，触发消息事件，查看站内信的信息。
 
 ##### 说明：本节用站内信进行演示，邮件消息同理，触发事件后就能收到对应消息邮件。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185330089-f5c9be56-5504-4aab-9d60-0abe18733251.png)
 
 ##### 图1-3 查看站内信的信息
