--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/2. 消息配置/3. 修改消息事件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/2. 消息配置/3. 修改消息事件.md
@@ -18,12 +18,12 @@
 
 a）单击右上角的设置图标，再单击服务 > 消息配置 > 消息事件，进入“消息事件”页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185330981-c0bc9bb3-dcd9-4dd3-9e07-5a751d13e69f.png)
 
 ##### 图3-1 进入“消息事件”页面
 
 b）在“新增消息事件”页面，找到需要修改的消息事件，进行修改后，单击事件后的保存按钮即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/2.%20%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185331017-1966a1a6-08e5-48e6-ac4e-c29e4ca117a2.png)
 
 ##### 图3-2 单击事件后的保存按钮
