--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/1. 创建自定义字段.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/1. 创建自定义字段.md
@@ -1,1 +1,41 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.3 模板管理
+
+##### 2.2.2.3.1 创建自定义字段
+
+创建好自定义字段后，可以在缺陷模板中选择使用，本节为您具体介绍如何创建自定义字段。
+
+##### 2.2.2.3.1.1 操作步骤
+
+a）单击右上角的设置图标，进入“系统配置”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 进入“系统配置”页面
+
+b）在系统配置中，进入“服务 > 模板管理 > 自定义字段”页面，单击创建字段，进入“创建字段”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/1-2.png)
+
+##### 图1-2 进入“创建字段”页面
+
+c）在“创建字段”页面，根据需求填写正确内容，然后单击确定即可。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/1-3.png)
+
+##### 图1-3 填写字段内容
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/1-4.png)
+
+##### 图1-4 单击确定
+
+##### 说明：
+
+##### c1）若字段类型选择的是单选下拉列表或多选下拉列表，则需要输入下拉列表的键和值。
+
+##### c2）请注意：“键”内容需要与禅道系统保持一致，若不一致，提交缺陷后禅道将无法显示对应的信息；“值”内容表示在全自动测试平台下拉框显示的值，可自行定义，不会影响对应键在禅道系统中值的显示。
