--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/4. 创建缺陷模板.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/4. 创建缺陷模板.md
@@ -1,1 +1,49 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.3 模板管理
+
+##### 2.2.2.3.4 创建缺陷模板
+
+用户可以根据自定义字段创建自定义缺陷模板，项目关联该缺陷模板后，创建缺陷时将会按照指定模板内容去填写缺陷信息，本节为您具体介绍如何创建缺陷模板。
+
+##### 2.2.2.3.4.1 操作步骤
+
+a）进入“系统配置 > 服务 > 模板管理 > 缺陷模板管理”页面，单击创建缺陷模板，打开“新增缺陷模板”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/4-1.png)
+
+##### 图4-1 单击创建缺陷模板
+
+b）在“新增缺陷模板”页面，根据提示填写基本信息，然后单击添加字段，进入“选择自定义字段”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/4-2.png)
+
+##### 图4-2 进入“选择自定义字段”页面
+
+c）在“选择自定义字段”页面，勾选所需字段后，单击确定，回到新增页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/4-3.png)
+
+##### 图4-3 单击确定
+
+d）在“新增缺陷模板”页面，自定义填写已选字段的默认值、API字段名、是否必填后，单击提交即可。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/4-4.png)
+
+##### 图4-4 填写模板信息
+
+##### 说明：
+
+##### d1）API字段名需与禅道配置中的API字段名保持一致，否则在禅道无法显示对应的值。
+
+##### d2）API字段名查看方法：找到禅道的安装目录（例如：E:\xampp\zentao\module\bug\lang），打开zh-cn.php文件查看，如图严重程
+
+##### d3）度和优先级的API字段名分别为severity、pri。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/4-5.png)
+
+##### 图4-5 严重程度和优先级
