--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/6. 删除缺陷模板.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/6. 删除缺陷模板.md
@@ -14,12 +14,12 @@
 
 a）进入“系统配置 > 服务 > 模板管理 > 缺陷模板管理”页面，找到需要删除的缺陷模板，单击删除图标，弹出二次确认弹窗。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185556738-de77fccf-3d83-41c7-8bb6-24bc1c947507.png)
 
 ##### 图6-1 删除缺陷模板
 
 b）在二次确认弹窗单击确认即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185556750-03ddd534-9839-4bac-b4fb-923a9b59a02b.png)
 
 ##### 图6-2 在二次确认弹窗单击确认
