--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/10. 创建站内信模板.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/10. 创建站内信模板.md
@@ -1,1 +1,29 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.3 模板管理
+
+##### 2.2.2.3.10 创建站内信模板
+
+站内信模板用于统一管理消息通知发送站内信的内容模版，用户可以根据不同的使用场景配置不同的站内信模版。在创建消息事件时选择对应站内信模版后，发送消息通知时就会按对应的模版内容以站内信的方式发送给指定接收人，本节为您介绍如何创建站内信模板。
+
+##### 说明：创建站内信模板后，需绑定消息事件才可生效，详细操作请参见《SoFlu全自动测试平台教程操作指南第2.2.2.1节：创建消息事件》。
+
+##### 2.2.2.3.10.1 操作步骤
+
+a）进入“系统配置 > 服务 > 模板管理 > 站内信模版”页面，单击新增模板，打开“创建模板”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/10-1.png)
+
+##### 图10-1 打开“创建模板”页面
+
+b）在“创建模板”页面，自定义填写模版内容，填写完成后，单击“确定”即可。
+
+##### 说明：邮件内容可以使用动态参数占位符，系统便会在发送邮件时获取到当前动态参数字段的值并展示在内容中，单击内容示例可以查看更多动态参数占位符定义。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/10-2.png)
+
+##### 图10-2 填写模版内容
