--- a/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/11. 修改站内信模板.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/2. 系统设置/2. 服务配置/3. 模板管理/11. 修改站内信模板.md
@@ -1,1 +1,25 @@
-test
+### 2. 操作指南
+
+#### 2.2 系统设置
+
+##### 2.2.2 服务配置
+
+##### 2.2.2.3 模板管理
+
+##### 2.2.2.3.11 修改站内信模板
+
+本节为您介绍如何修改站内信模板。
+
+##### 2.2.2.3.11.1 操作步骤
+
+a）进入“系统配置 > 服务 > 模板管理 > 站内信模版”页面，找到需要修改的模板，单击编辑图标，打开“编辑模板”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/11-1.png)
+
+##### 图11-1 打开“编辑模板”页面
+
+b）在“编辑模板”页面，填写修改后的模板内容，填写完成后，单击确定即可。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/2.%20%E7%B3%BB%E7%BB%9F%E8%AE%BE%E7%BD%AE/2.%20%E6%9C%8D%E5%8A%A1%E9%85%8D%E7%BD%AE/3.%20%E6%A8%A1%E6%9D%BF%E7%AE%A1%E7%90%86/11-2.png)
+
+##### 图11-2 填写修改后的模板内容
