--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/1. 新增测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/1. 新增测试用例.md
@@ -1,1 +1,31 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.1 用例管理
+
+##### 2.3.1.1 新增测试用例
+
+本节将为您介绍新增测试用例的具体操作过程。
+
+##### 2.3.1.1.1 操作步骤
+
+a）进入项目的测试用例功能模块，选中需要新增测试用例的模块，单击新增用例，进入“新增测试用例”页面。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 进入“新增测试用例”页面
+
+b）在“新增测试用例”页面，根据提示填写正确的用例信息，然后单击保存即可。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/1-2.png)
+
+##### 图1-2 填写正确的用例信息
+
+##### 说明：
+
+b1）选择评审人时可以多选。
+
+b2）单击添加执行步骤可以新增多个操作步骤和预期结果。
+
+b3）类型：选择接口测试时，该用例可在测试场景中绑定接口；选择UI测试时，该用例创建后可以在UI测试创建对应的UI执行脚本；选择功能测试时，仅做功能用例，不能绑定接口测试或者UI测试。
