--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/1. 新增测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/1. 新增测试用例.md
@@ -12,13 +12,13 @@
 
 a）进入项目的测试用例功能模块，选中需要新增测试用例的模块，单击新增用例，进入“新增测试用例”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/185557591-949b4835-baf7-4d39-8b16-3a484a1dc93b.png)
 
 ##### 图1-1 进入“新增测试用例”页面
 
 b）在“新增测试用例”页面，根据提示填写正确的用例信息，然后单击保存即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185557601-4bb55983-104d-434e-9a1f-b857652e0ee9.png)
 
 ##### 图1-2 填写正确的用例信息
 
