--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/2. 修改测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/2. 修改测试用例.md
@@ -14,12 +14,12 @@
 
 a）进入项目的测试用例功能模块，找到需要编辑的测试用例，单击编辑图标，进入“编辑”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185571747-e49c35e6-691a-4ab8-bbe6-b8ee37f3a269.png)
 
 ##### 图2-1 进入“编辑”页面
 
 b）在“编辑”页面，填写修改后的信息，然后单击保存即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185571764-1a25b195-26c1-44a4-9ad2-1844048df656.png)
 
 ##### 图2-2 填写修改后的信息
