--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/3. 删除测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/3. 删除测试用例.md
@@ -1,1 +1,21 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.1 用例管理
+
+##### 2.3.1.3 删除测试用例
+
+本节主要介绍删除测试用例的具体操作过程。
+
+##### 2.3.1.3.1 操作步骤
+
+a）进入项目的测试用例功能模块，找到需要删除的测试用例，单击删除图标，弹出二次确认弹窗。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/3-1.png)
+
+##### 图3-1 单击删除图标
+
+b）在二次弹窗单击确定即可。
+
+##### 说明：已审核通过的测试用例不能删除，只能禁用或启用。
