--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/4. 提交测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/4. 提交测试用例.md
@@ -1,1 +1,21 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.1 用例管理
+
+##### 2.3.1.4 提交测试用例
+
+用例提交后，会将用例提交给审核人进行审核，本节将为您介绍如何提交测试用例。
+
+##### 2.3.1.4.1 操作步骤
+
+a）进入项目的测试用例功能模块，找到需要提交的测试用例，单击更多 > 提交，弹出二次确认弹窗。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/4-1.png)
+
+##### 图4-1 弹出二次确认弹窗
+
+b）在二次确认弹窗单击确定即可。
+
+##### 说明：测试用例提交后不能再修改信息，如果需要修改，要先将测试用例取消提交后才能进行修改。提交用例后，用例会进入待评审。
