--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/9. 查看评审记录.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/9. 查看评审记录.md
@@ -1,1 +1,19 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.1 用例管理
+
+##### 2.3.1.9 查看评审记录
+
+在测试用例经过评审后，可以查看该用例的评审记录，本节主要介绍查看评审记录的具体操作过程。
+
+##### 2.3.1.9.1 操作步骤
+
+a）进入项目的测试用例功能模块，找到需要操作的测试用例，单击更多 > 评审记录，打开“用例评审记录”页面。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/9-1.png)
+
+##### 图9-1 打开“用例评审记录”页面
+
+b）查看用例评审记录。
