--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/9. 查看评审记录.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/9. 查看评审记录.md
@@ -12,12 +12,12 @@
 
 a）进入项目的测试用例功能模块，找到需要操作的测试用例，单击更多 > 评审记录，打开“用例评审记录”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/9-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185883407-22a687c3-056b-4a25-b2d9-f339d34443f8.png)
 
 ##### 图9-1 打开“用例评审记录”页面
 
 b）查看用例评审记录。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/9-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185883421-5dd50bae-5dd1-45e3-a517-816181a02e61.png)
 
 ##### 图9-2 查看用例评审记录
