--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/10. 查看修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/10. 查看修改日志.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.1 用例管理
+
+##### 2.3.1.10 查看修改日志
+
+本节将为您介绍如何查看测试用例的修改日志。在修改日志列表，您不仅可以看到测试用例的所有修改日志，还可以通过单击“回滚到此版本”选项，将测试用例的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行测试用例的版本差异对比。
+
+##### 2.3.1.10.1 操作步骤
+
+a）进入项目的测试用例功能模块，找到需要操作的测试用例，单击更多 > 修改日志，弹出“修改日志列表”。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/10-1.png)
+
+##### 图10-1 单击更多 > 修改日志
