--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/10. 查看修改日志.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/10. 查看修改日志.md
@@ -12,24 +12,24 @@
 
 a）进入项目的测试用例功能模块，找到需要操作的测试用例，单击更多 > 修改日志，弹出“修改日志列表”。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/10-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185883591-6b881e6a-a5c2-4d79-a5a0-16e6509b458c.png)
 
 ##### 图10-1 单击更多 > 修改日志
 
 b）在“修改日志列表”，单击回滚到此版本，测试用例将从当前版本回滚到对应的版本。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/10-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185883605-5235756b-7ea3-4309-8562-21a54d656700.png)
 
 ##### 图10-2 回滚版本
 
 c）在“修改日志列表”，单击日志比较，进入“测试用例版本比较”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/10-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185883624-7a705d41-2747-4721-a1e6-ea47d4541f2e.png)
 
 ##### 图10-3 进行日志比较
 
 d）在“测试用例版本比较”页面，选择需要对比的两个版本后，单击开始比较，将会用红框标出两个版本之间的差异。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/10-4.png)
+![image](https://user-images.githubusercontent.com/79617492/185883649-039bdc70-e9c3-4f0c-91d6-6c73c5a54cbd.png)
 
 ##### 图10-4 单击开始比较
