--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
@@ -19,3 +19,23 @@
 ##### d）同时用户可以在脑图中直接查看到测试用例的状态，只有处于编辑中的测试用例才可在脑图中编辑修改，处于其它状态（如已提交、审核通过等）的测试用例均不能进行编辑修改操作。
 
 ##### 2.3.1.11.1 步骤引导
+
+a）添加测试用例模块
+
+b）添加测试用例
+
+c）添加测试用例前置条件
+
+d）添加测试用例步骤
+
+e）添加测试用例备注
+
+##### 2.3.1.11.1.1 步骤 1：添加测试用例模块
+
+##### 说明：
+
+##### 单击脑图中的圆形“+”号和“-”号可以展开或收起测试用例的相关内容。
+
+##### 卡片上的方形“+”表示新增，“-”表示删除当前创建的信息。
+
+##### 蓝色卡片表示用例模块，白色卡片表示测试用例。
