--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
@@ -39,3 +39,17 @@ e）添加测试用例备注
 ##### 卡片上的方形“+”表示新增，“-”表示删除当前创建的信息。
 
 ##### 蓝色卡片表示用例模块，白色卡片表示测试用例。
+
+a）进入项目的测试用例功能模块，切换到脑图页面，选中需要操作侧用例模块，在脑图中单击模块卡片的加号 > 模块，新增一个用例模块卡片。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-1.png)
+
+##### 图11-1 新增一个用例模块卡片
+
+b）在新增的用例模块卡片上，双击卡片内容编辑模块名称。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-2.png)
+
+##### 图11-2 编辑模块名称
+
+##### 2.3.1.11.1.2 步骤 2：添加测试用例
