--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
@@ -105,3 +105,9 @@ a）单击用例卡片的加号 > 备注，新增用例的步骤卡片。
 ##### 图11-8 新增用例的步骤卡片
 
 b）在新增的卡片上，双击卡片内容编辑用例备注，单后单击保存
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-9.png)
+
+##### 图11-9 编辑用例备注
+
+##### 说明：脑图创建用例保存后，要切回列表页面，选择评审人，然后提交用例，用例才会进入待评审状态。
