--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
@@ -42,13 +42,13 @@ e）添加测试用例备注
 
 a）进入项目的测试用例功能模块，切换到脑图页面，选中需要操作侧用例模块，在脑图中单击模块卡片的加号 > 模块，新增一个用例模块卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185884632-d7722151-12ee-4078-86bc-7dfeea959555.png)
 
 ##### 图11-1 新增一个用例模块卡片
 
 b）在新增的用例模块卡片上，双击卡片内容编辑模块名称。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185884647-fc403091-a8e8-4db2-8e75-34422329cebc.png)
 
 ##### 图11-2 编辑模块名称
 
@@ -56,13 +56,13 @@ b）在新增的用例模块卡片上，双击卡片内容编辑模块名称。
 
 a）在脑图中，单击模块卡片的加号 > 用例，新增用例卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185884667-e7758e2a-ceb0-4b51-9f72-c50c0ba86c55.png)
 
 ##### 图11-3 新增用例卡片
 
 b）在新增的用例卡片上，双击卡片内容编辑用例名称。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-4.png)
+![image](https://user-images.githubusercontent.com/79617492/185884691-e514c972-d802-4c2e-8761-9e44bd779774.png)
 
 ##### 图11-4 编辑用例名称
 
@@ -70,13 +70,13 @@ b）在新增的用例卡片上，双击卡片内容编辑用例名称。
 
 a）单击用例卡片的加号 > 前置条件，新增前置条件卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-5.png)
+![image](https://user-images.githubusercontent.com/79617492/185884713-812c3a77-eeb8-48ee-b816-f543414d90a9.png)
 
 ##### 图11-5 新增前置条件卡片
 
 b）在新增的前置条件卡片上，双击卡片内容编辑前置条件。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-6.png)
+![image](https://user-images.githubusercontent.com/79617492/185884745-587ad2d1-6835-4cd8-99a4-fca22f2e52be.png)
 
 ##### 图11-6 编辑前置条件
 
