--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/11. 脑图展示与编辑测试用例.md
@@ -42,13 +42,13 @@ e）添加测试用例备注
 
 a）进入项目的测试用例功能模块，切换到脑图页面，选中需要操作侧用例模块，在脑图中单击模块卡片的加号 > 模块，新增一个用例模块卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-1.png)
+![image](https://user-images.githubusercontent.com/79617492/185886500-eab32f15-ba7c-41e8-8020-a7a482478abf.png)
 
 ##### 图11-1 新增一个用例模块卡片
 
 b）在新增的用例模块卡片上，双击卡片内容编辑模块名称。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185886513-cb41824c-32e7-409d-80a6-a54036a48306.png)
 
 ##### 图11-2 编辑模块名称
 
@@ -56,13 +56,13 @@ b）在新增的用例模块卡片上，双击卡片内容编辑模块名称。
 
 a）在脑图中，单击模块卡片的加号 > 用例，新增用例卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-3.png)
+![image](https://user-images.githubusercontent.com/79617492/185886526-432891ca-5d5d-4048-9b69-659484a714c8.png)
 
 ##### 图11-3 新增用例卡片
 
 b）在新增的用例卡片上，双击卡片内容编辑用例名称。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-4.png)
+![image](https://user-images.githubusercontent.com/79617492/185886545-0bed9fee-cfe1-4f7e-a191-67b14e42639b.png)
 
 ##### 图11-4 编辑用例名称
 
@@ -70,13 +70,13 @@ b）在新增的用例卡片上，双击卡片内容编辑用例名称。
 
 a）单击用例卡片的加号 > 前置条件，新增前置条件卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-5.png)
+![image](https://user-images.githubusercontent.com/79617492/185886565-0a7ea5f5-2d84-481a-b196-14a5fbb5bbb5.png)
 
 ##### 图11-5 新增前置条件卡片
 
 b）在新增的前置条件卡片上，双击卡片内容编辑前置条件。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/185886584-d25714c4-fc2e-4152-bab2-217b9ab79f74.png)
 
 ##### 图11-6 编辑前置条件
 
@@ -84,13 +84,13 @@ b）在新增的前置条件卡片上，双击卡片内容编辑前置条件。
 
 a）单击用例卡片的加号 > 步骤，新增步骤描述和预期结果卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-6.png)
+![image](https://user-images.githubusercontent.com/79617492/185886606-1540b0b3-2079-4066-90f2-a03dc167356d.png)
 
 ##### 图11-7 新增步骤描述和预期结果卡片
 
 b）在新增的卡片上，双击卡片内容编辑步骤和预期结果。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-7.png)
+![image](https://user-images.githubusercontent.com/79617492/185886629-0ef494a8-a128-49ab-b773-fee531f0c887.png)
 
 ##### 图11-8 编辑步骤和预期结果
 
@@ -100,13 +100,13 @@ b）在新增的卡片上，双击卡片内容编辑步骤和预期结果。
 
 a）单击用例卡片的加号 > 备注，新增用例的步骤卡片。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-8.png)
+![image](https://user-images.githubusercontent.com/79617492/185886657-56d95ea2-a89c-426b-9cec-909bd8f2dd96.png)
 
 ##### 图11-9 新增用例的步骤卡片
 
 b）在新增的卡片上，双击卡片内容编辑用例备注，单后单击保存。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/11-9.png)
+![image](https://user-images.githubusercontent.com/79617492/185886682-8902fb22-9fd4-43b2-a518-ee25223beeef.png)
 
 ##### 图11-10 编辑用例备注
 
