--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/12. 导出测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/12. 导出测试用例.md
@@ -12,12 +12,12 @@
 
 a）进入项目的测试用例功能模块，单击导出用例，进入“导出测试用例”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/12-1.png)
+![image](https://user-images.githubusercontent.com/79617492/186123174-2794b3e3-629f-43ae-9f76-1a3a5fd358d2.png)
 
 ##### 图12-1 进入“导出测试用例”页面
 
 b）在“导出测试用例”页面，选择需要导出的用例模块以及测试用例，单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/12-2.png)
+![image](https://user-images.githubusercontent.com/79617492/186123193-1235dca3-3c18-42d5-bf5a-4b37227ed96a.png)
 
 ##### 图12-2 选择用例模块以及测试用例
