--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/13. 复制测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/13. 复制测试用例.md
@@ -12,13 +12,13 @@
 
 a）进入项目的测试用例功能模块，找到需要复制的测试用例，单击更多 > 复制，进入“新增测试用例”页面。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/13-1.png)
+![image](https://user-images.githubusercontent.com/79617492/186123455-11655bc3-dc89-4ff3-98d4-9dd2a336eef5.png)
 
 ##### 图13-1 进入“新增测试用例”页面
 
 b）在“新增测试用例”页面，更改用例名称以及其它信息后，单击保存即可。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/13-2.png)
+![image](https://user-images.githubusercontent.com/79617492/186123474-9f4b325a-5e73-46fe-9559-2c4f2da3b2f8.png)
 
 ##### 图13-2 更改用例名称及其它信息
 
