--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/16. 查询测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/1. 用例管理/16. 查询测试用例.md
@@ -12,6 +12,6 @@
 
 a）进入全自动测试平台“测试用例 > 用例管理”页面，在左侧选中需查看的测试用例模块，您便可以在右侧通过输入关键字或通过选择用例等级、类型、状态筛选条件来查询所需查看的测试用例。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/1.%20%E7%94%A8%E4%BE%8B%E7%AE%A1%E7%90%86/16-1.png)
+![image](https://user-images.githubusercontent.com/79617492/186124184-f6554fd0-be54-43b7-9bdc-ae59f0e004b8.png)
 
 ##### 图16-1 选中需查看的测试用例模块
