--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/1. 评审测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/1. 评审测试用例.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.2 用例评审评论
+
+##### 2.3.2.1 评审测试用例
+
+已提交的测试用例需评审通过后才可以绑定测试场景，本节为您介绍评审测试用例的具体操作过程。
+
+##### 2.3.2.1.1 前提条件
+
+您已提交测试用例给该账号进行审核。
+
+##### 2.3.2.1.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“用例评审”页面，找到需要评审的测试用例，单击评审，进入“测试用例评审”页面。
