--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/1. 评审测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/1. 评审测试用例.md
@@ -15,3 +15,15 @@
 ##### 2.3.2.1.2 操作步骤
 
 a）进入项目的测试用例功能模块，切换到“用例评审”页面，找到需要评审的测试用例，单击评审，进入“测试用例评审”页面。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/2.%20%E7%94%A8%E4%BE%8B%E8%AF%84%E5%AE%A1%E8%AF%84%E8%AE%BA/image.png)
+
+##### 图1-1 进入“测试用例评审”页面
+
+b）在“测试用例评审”页面，查看用例内容后下滑至底部，填写评审内容，选择是否通过，然后单击提交即可。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/2.%20%E7%94%A8%E4%BE%8B%E8%AF%84%E5%AE%A1%E8%AF%84%E8%AE%BA/1-2.png)
+
+##### 图1-2 填写评审内容
+
+##### 说明：用例评审的同时也可以添加评论内容。
