--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/2. 评论测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/2. 评论测试用例.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.2 用例评审评论
+
+##### 2.3.2.2 评论测试用例
+
+创建项目的用户和项目被授权用户可以对已提交的测试用例进行评论，同时您也可以看到其他用户对该用例的评论，本节为您介绍评论测试用例的具体操作过程。
+
+##### 2.3.2.2.1 前提条件
+
+您已提交测试用例给该账号进行审核。
+
+##### 2.3.2.2.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“用例评论”页面，找到需要操作的测试用例，单击评论，进入“测试用例评论”页面。
