--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/2. 评论测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/2. 评论测试用例.md
@@ -15,3 +15,15 @@
 ##### 2.3.2.2.2 操作步骤
 
 a）进入项目的测试用例功能模块，切换到“用例评论”页面，找到需要操作的测试用例，单击评论，进入“测试用例评论”页面。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/2.%20%E7%94%A8%E4%BE%8B%E8%AF%84%E5%AE%A1%E8%AF%84%E8%AE%BA/2-1.png)
+
+##### 图2-1 进入“测试用例评论”页面
+
+b）在“测试用例评论”页面，下拉至底部，填写评论内容后，单击添加评论即可。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/2.%20%E7%94%A8%E4%BE%8B%E8%AF%84%E5%AE%A1%E8%AF%84%E8%AE%BA/2-2.png)
+
+##### 图2-2 填写评论内容
+
+##### 说明：评论框为富文本框，您可以对评论内容进行个性化设置，也可以上传图片。
