--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/3. 批量评审测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/2. 用例评审评论/3. 批量评审测试用例.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.2 用例评审评论
+
+##### 2.3.2.3 批量评审测试用例
+
+本节为您介绍批量评审测试用例的具体操作过程。
+
+##### 2.3.2.3.1 前提条件
+
+已存在多条用例未评审。
