--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/2. 提交缺陷.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/2. 提交缺陷.md
@@ -16,7 +16,7 @@
 
 a）进入项目的测试用例功能模块，切换到“缺陷管理”页面，找到需要操作的缺陷，单击提交，弹出二次确认弹窗。
 
-![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/3.%20%E7%BC%BA%E9%99%B7%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/186385793-ee54eaae-7161-415d-8061-87d3f80be7a8.png)
 
 ##### 图2-1 提交需要操作的缺陷
 
