--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/4. 修改缺陷.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/4. 修改缺陷.md
@@ -7,3 +7,11 @@
 ##### 2.3.3.4 修改缺陷
 
 本节为您介绍修改缺陷的具体操作过程。
+
+##### 2.3.3.4.1 前提条件
+
+所在项目已存在创建好，但未提交的缺陷。
+
+##### 2.3.3.4.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“缺陷管理”页面，找到需要操作的缺陷，单击编辑图标，进入“修改缺陷”页面。
