--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/5. 删除缺陷.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/5. 删除缺陷.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.3 缺陷管理
+
+##### 2.3.3.5 删除缺陷
+
+本节为您具体介绍如何删除缺陷。
+
+##### 2.3.3.5.1 前提条件
+
+所在项目已存在创建好但未提交的缺陷。
