--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/5. 删除缺陷.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/5. 删除缺陷.md
@@ -11,3 +11,13 @@
 ##### 2.3.3.5.1 前提条件
 
 所在项目已存在创建好但未提交的缺陷。
+
+##### 2.3.3.5.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“缺陷管理”页面，找到需要删除的缺陷，单击删除图标，弹出二次确认弹窗。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/3.%20%E7%BC%BA%E9%99%B7%E7%AE%A1%E7%90%86/5-1.png)
+
+##### 图5-1 删除缺陷
+
+b）在二次确认弹窗上单击继续删除即可。
