--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/2. 执行测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/2. 执行测试场景.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.1 测试场景管理
+
+##### 2.3.4.1.2 执行测试场景
+
+本节介绍如何执行测试场景。
+
+##### 2.3.4.1.2.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方测试场景，进入测试场景页面。
