--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/4. 导入测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/4. 导入测试场景.md
@@ -1,1 +1,14 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.1 测试场景管理
+
+##### 2.3.4.1.4 导入测试场景
+
+本节介绍如何导入测试场景，主要有从文件导入和从模板导入两种方式去导入测试场景。
+
+##### 2.3.4.1.4.1 操作步骤
+
